<resources>
    <string name="app_name">Games index</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="category_string">Category</string>
    <string name="size_string">Group size</string>
    <string name="age_string">Age</string>
    <string name="material_string">Materials</string>
    <string name="description_string">Description</string>
    <string name="filter_title">Filter</string>
    <string name="no_materials">no materials</string>
    <string name="reset_filter">Reset</string>
    <string name="use_Filter">use filter</string>
    <string name="share">Share With</string>
    <string name="category_group_allocation">Group allocations</string>
    <string name="category_get_to_know">Get to knows</string>
    <string name="category_circle_game">Circle games</string>
    <string name="category_singing_game">Singing games</string>
    <string name="category_movement_game">Movement games</string>
    <string name="category_terain_game">Terain Game</string>
    <string name="category_trust_game">Trust games</string>
    <string name="category_prayers">prayerss</string>
    <string name="category_impetus">Impetus</string>
    <string name="category_puzzle">Puzzles</string>
    <string name="category_card_games">Card games</string>
    <string name="category_default">Default</string>
    <string name="category_all">All</string>
    <string name="randome_game_description">Button to get a randome Game</string>
    <string name="description_empty">no description</string>
    <string name="filter_favorite">Display only favorits</string>

</resources>