<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".selectFilter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/jugendteamDarkBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/filter_title"
            app:titleTextColor="@color/white" />

        <Switch
            android:id="@+id/switch_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_materials" />

        <Switch
            android:id="@+id/switch_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="20"
                android:progress="5"
                android:progressTint="@color/jugendteamDarkBlue" />

            <EditText
                android:id="@+id/ageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_sice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_string" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar2"
                style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="100"
                android:progress="5"
                android:progressTint="@color/jugendteamDarkBlue" />

            <EditText
                android:id="@+id/sizeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/filterReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_filter" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_Filter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>